--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,9 @@ script:
   - perl Makefile.PL
   - make
   - make test
-  - make install
+
+  - prove -vwr t/*
+
+  - make -C percona-toolkit/src/go
+
+  - sudo make install
