--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,17 @@ go:
 
 go_import_path: github.com/percona/percona-toolkit
 
+env:
+  global:
+    - PERCONA_TOOLKIT_BRANCH=/home/travis/gopath/src/github.com/percona/percona-toolkit
+    - PERL5LIB=/home/travis/gopath/src/github.com/percona/percona-toolkit/lib
+    - PERCONA_TOOLKIT_SANDBOX=/home/travis/mysql/percona-server-5.6.32
+
+before_install:
+  - mkdir -p /home/travis/mysql/percona-server-5.6.32
+  - wget https://www.percona.com/downloads/Percona-Server-5.6/Percona-Server-5.6.32-78.1/binary/tarball/Percona-Server-5.6.32-rel78.1-Linux.x86_64.ssl100.tar.gz
+  - tar xvzf Percona-Server-5.6.32-rel78.1-Linux.x86_64.ssl100.tar.gz --strip 1 -C /home/travis/mysql/percona-server-5.6.32
+
 install:
   - pwd
   - perl -v
