--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 before_install:
   - mkdir -p /home/travis/mysql/percona-server-5.6.32
   - wget https://www.percona.com/downloads/Percona-Server-5.6/Percona-Server-5.6.32-78.1/binary/tarball/Percona-Server-5.6.32-rel78.1-Linux.x86_64.ssl100.tar.gz
-  - tar xvzf Percona-Server-5.6.32-rel78.1-Linux.x86_64.ssl100.tar.gz --strip 1 -C /home/travis/mysql/percona-server-5.6.32
+  - tar xzf Percona-Server-5.6.32-rel78.1-Linux.x86_64.ssl100.tar.gz --strip 1 -C /home/travis/mysql/percona-server-5.6.32
 
 install:
   - pwd
@@ -29,6 +29,8 @@ script:
   - perl Makefile.PL
   - make
   - make test
+
+  - sandbox/test-env start
 
   - prove -vwr t/*
 
